[gd_scene load_steps=13 format=2]

[ext_resource path="res://addons/admob/assets/android.png" type="Texture" id=1]
[ext_resource path="res://addons/admob/assets/poing.jpeg" type="Texture" id=2]
[ext_resource path="res://addons/admob/assets/fonts/arial.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://addons/admob/src/core/AdMobEditor.gd" type="Script" id=4]
[ext_resource path="res://addons/admob/assets/ios.png" type="Texture" id=5]
[ext_resource path="res://addons/admob/assets/icon-76.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.839216, 0.0352941, 0.0352941, 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0.772549, 0, 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.172549, 0.568627, 0.992157, 1 )

[sub_resource type="DynamicFont" id=6]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="AdMobEditor" type="Control"]
pause_mode = 2
anchor_left = -0.002
anchor_right = 1.502
anchor_bottom = 0.731444
margin_left = 1.0
margin_right = -6.10352e-05
margin_bottom = -8.30005
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="TopPanel" type="Panel" parent="."]
anchor_right = 1.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 35 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="TopPanel"]
anchor_right = 1.0
margin_right = -401.4
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "AdMob Editor"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icons" type="Control" parent="TopPanel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -395.4
margin_right = 0.600037
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Poing" type="TextureButton" parent="TopPanel/Icons"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdMob" type="TextureButton" parent="TopPanel/Icons"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -79.9999
margin_right = -39.9999
margin_bottom = 40.0
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="iOS" type="TextureButton" parent="TopPanel/Icons"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -118.145
margin_right = -78.1449
margin_bottom = 40.0
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Android" type="TextureButton" parent="TopPanel/Icons"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -158.6
margin_right = -118.6
margin_bottom = 40.0
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MiddleContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 40.0
margin_right = 6.10352e-05
margin_bottom = -34.9996
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MiddleContainer"]
margin_right = 506.0
margin_bottom = 332.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Enabled" type="CheckBox" parent="MiddleContainer/VBoxContainer"]
margin_right = 506.0
margin_bottom = 24.0
pressed = true
text = "Enabled"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestEuropeUserConsent" type="CheckBox" parent="MiddleContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 506.0
margin_bottom = 52.0
text = "Test Europe User Consent"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BannerShowInstantly" type="CheckBox" parent="MiddleContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 506.0
margin_bottom = 80.0
pressed = true
text = "Show Banner Instantly"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BannerSizeHBoxContainer" type="HBoxContainer" parent="MiddleContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 506.0
margin_bottom = 104.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MiddleContainer/VBoxContainer/BannerSizeHBoxContainer"]
margin_top = 3.0
margin_right = 75.0
margin_bottom = 17.0
text = "Banner Size"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BannerSize" type="OptionButton" parent="MiddleContainer/VBoxContainer/BannerSizeHBoxContainer"]
margin_left = 79.0
margin_right = 243.0
margin_bottom = 20.0
text = "MEDIUM_RECTANGLE"
items = [ "BANNER", null, false, 0, null, "MEDIUM_RECTANGLE", null, false, 1, null, "FULL_BANNER", null, false, 2, null, "LEADERBOARD", null, false, 3, null, "ADAPTIVE", null, false, 4, null, "SMART_BANNER", null, false, 5, null ]
selected = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BannerOnTop" type="CheckBox" parent="MiddleContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 506.0
margin_bottom = 132.0
pressed = true
text = "Banner On Top"

[node name="ChildDirectedTreatment" type="CheckBox" parent="MiddleContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 506.0
margin_bottom = 160.0
text = "Child Directed Treatment"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxAdContentRating" type="HBoxContainer" parent="MiddleContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 506.0
margin_bottom = 184.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="MiddleContainer/VBoxContainer/MaxAdContentRating"]
margin_top = 3.0
margin_right = 132.0
margin_bottom = 17.0
text = "MaxAdContentRating"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="OptionButton" parent="MiddleContainer/VBoxContainer/MaxAdContentRating"]
margin_left = 136.0
margin_right = 183.0
margin_bottom = 20.0
text = "PG"
items = [ "G", null, false, 0, null, "PG", null, false, 1, null, "T", null, false, 2, null, "MA", null, false, 3, null ]
selected = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnitIds" type="HBoxContainer" parent="MiddleContainer/VBoxContainer"]
margin_top = 188.0
margin_right = 506.0
margin_bottom = 332.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="MiddleContainer/VBoxContainer/UnitIds"]
margin_top = 65.0
margin_right = 58.0
margin_bottom = 79.0
text = "UNIT IDS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="MiddleContainer/VBoxContainer/UnitIds"]
margin_left = 62.0
margin_right = 506.0
margin_bottom = 144.0
rect_clip_content = true
mouse_filter = 1
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Android" type="GridContainer" parent="MiddleContainer/VBoxContainer/UnitIds/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="BannerKey" type="Label" parent="MiddleContainer/VBoxContainer/UnitIds/TabContainer/Android"]
margin_top = 5.0
margin_right = 129.0
margin_bottom = 19.0
text = "Banner"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BannerValue" type="LineEdit" parent="MiddleContainer/VBoxContainer/UnitIds/TabContainer/Android"]
margin_left = 133.0
margin_right = 436.0
margin_bottom = 24.0
text = "ca-app-pub-3940256099942544/6300978111"
align = 1
expand_to_text_length = true
virtual_keyboard_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InterstitialKey" type="Label" parent="MiddleContainer/VBoxContainer/UnitIds/TabContainer/Android"]
margin_top = 33.0
margin_right = 129.0
margin_bottom = 47.0
text = "Interstitial"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InterstitialValue" type="LineEdit" parent="MiddleContainer/VBoxContainer/UnitIds/TabContainer/Android"]
margin_left = 133.0
margin_top = 28.0
margin_right = 436.0
margin_bottom = 52.0
text = "ca-app-pub-3940256099942544/1033173712"
align = 1
expand_to_text_length = true
virtual_keyboard_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RewardedKey" type="Label" parent="MiddleContainer/VBoxContainer/UnitIds/TabContainer/Android"]
margin_top = 61.0
margin_right = 129.0
margin_bottom = 75.0
text = "Rewarded"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RewardedValue" type="LineEdit" parent="MiddleContainer/VBoxContainer/UnitIds/TabContainer/Android"]
margin_left = 133.0
margin_top = 56.0
margin_right = 436.0
margin_bottom = 80.0
text = "ca-app-pub-3940256099942544/5224354917"
align = 1
expand_to_text_length = true
virtual_keyboard_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RewardedInterstitialKey" type="Label" parent="MiddleContainer/VBoxContainer/UnitIds/TabContainer/Android"]
margin_top = 89.0
margin_right = 129.0
margin_bottom = 103.0
text = "RewardedInterstitial"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RewardedInterstitialValue" type="LineEdit" parent="MiddleContainer/VBoxContainer/UnitIds/TabContainer/Android"]
margin_left = 133.0
margin_top = 84.0
margin_right = 436.0
margin_bottom = 108.0
text = "ca-app-pub-3940256099942544/5354046379"
align = 1
expand_to_text_length = true
virtual_keyboard_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="iOS" type="GridContainer" parent="MiddleContainer/VBoxContainer/UnitIds/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_clip_content = true
columns = 2

[node name="BannerKey" type="Label" parent="MiddleContainer/VBoxContainer/UnitIds/TabContainer/iOS"]
margin_top = 5.0
margin_right = 129.0
margin_bottom = 19.0
text = "Banner"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BannerValue" type="LineEdit" parent="MiddleContainer/VBoxContainer/UnitIds/TabContainer/iOS"]
margin_left = 133.0
margin_right = 436.0
margin_bottom = 24.0
text = "ca-app-pub-3940256099942544/2934735716"
align = 1
expand_to_text_length = true
virtual_keyboard_enabled = false

[node name="InterstitialKey" type="Label" parent="MiddleContainer/VBoxContainer/UnitIds/TabContainer/iOS"]
margin_top = 33.0
margin_right = 129.0
margin_bottom = 47.0
text = "Interstitial"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InterstitialValue" type="LineEdit" parent="MiddleContainer/VBoxContainer/UnitIds/TabContainer/iOS"]
margin_left = 133.0
margin_top = 28.0
margin_right = 436.0
margin_bottom = 52.0
text = "ca-app-pub-3940256099942544/4411468910"
align = 1
expand_to_text_length = true
virtual_keyboard_enabled = false

[node name="RewardedKey" type="Label" parent="MiddleContainer/VBoxContainer/UnitIds/TabContainer/iOS"]
margin_top = 61.0
margin_right = 129.0
margin_bottom = 75.0
text = "Rewarded"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RewardedValue" type="LineEdit" parent="MiddleContainer/VBoxContainer/UnitIds/TabContainer/iOS"]
margin_left = 133.0
margin_top = 56.0
margin_right = 436.0
margin_bottom = 80.0
text = "ca-app-pub-3940256099942544/1712485313"
align = 1
expand_to_text_length = true
virtual_keyboard_enabled = false

[node name="RewardedInterstitialKey" type="Label" parent="MiddleContainer/VBoxContainer/UnitIds/TabContainer/iOS"]
margin_top = 89.0
margin_right = 129.0
margin_bottom = 103.0
text = "RewardedInterstitial"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RewardedInterstitialValue" type="LineEdit" parent="MiddleContainer/VBoxContainer/UnitIds/TabContainer/iOS"]
margin_left = 133.0
margin_top = 84.0
margin_right = 436.0
margin_bottom = 108.0
text = "ca-app-pub-3940256099942544/6978759866"
align = 1
expand_to_text_length = true
virtual_keyboard_enabled = false

[node name="BottomPanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -35.0
rect_min_size = Vector2( 0, 35 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SupportVersion" type="RichTextLabel" parent="BottomPanel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -35.0
margin_right = -158.0
custom_styles/normal = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[rainbow sat=10]iOS[/rainbow][color=black]:2.0.x[/color] [rainbow sat=10]Android[/rainbow][color=black]:2.0.x[/color]"
text = "iOS:2.0.x Android:2.0.x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentVersion" type="Label" parent="BottomPanel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -158.0
margin_top = -35.0
rect_min_size = Vector2( 0, 35 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Version: 1.0.0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MiddleContainer/VBoxContainer/Enabled" to="." method="_on_Enabled_pressed"]
[connection signal="pressed" from="MiddleContainer/VBoxContainer/TestEuropeUserConsent" to="." method="_on_TestEuropeUserConsent_pressed"]
[connection signal="pressed" from="MiddleContainer/VBoxContainer/BannerShowInstantly" to="." method="_on_BannerShowInstantly_pressed"]
[connection signal="item_selected" from="MiddleContainer/VBoxContainer/BannerSizeHBoxContainer/BannerSize" to="." method="_on_BannerSize_item_selected"]
[connection signal="pressed" from="MiddleContainer/VBoxContainer/BannerOnTop" to="." method="_on_BannerOnTop_pressed"]
[connection signal="pressed" from="MiddleContainer/VBoxContainer/ChildDirectedTreatment" to="." method="_on_ChildDirectedTreatment_pressed"]
[connection signal="item_selected" from="MiddleContainer/VBoxContainer/MaxAdContentRating/Value" to="." method="_on_MaxAdContentRating_item_selected"]
[connection signal="text_changed" from="MiddleContainer/VBoxContainer/UnitIds/TabContainer/Android/BannerValue" to="." method="_on_AndroidBanner_text_changed"]
[connection signal="text_changed" from="MiddleContainer/VBoxContainer/UnitIds/TabContainer/Android/InterstitialValue" to="." method="_on_AndroidInterstitial_text_changed"]
[connection signal="text_changed" from="MiddleContainer/VBoxContainer/UnitIds/TabContainer/Android/RewardedValue" to="." method="_on_AndroidRewarded_text_changed"]
[connection signal="text_changed" from="MiddleContainer/VBoxContainer/UnitIds/TabContainer/Android/RewardedInterstitialValue" to="." method="_on_AndroidRewardedInterstitial_text_changed"]
[connection signal="text_changed" from="MiddleContainer/VBoxContainer/UnitIds/TabContainer/iOS/BannerValue" to="." method="_on_iOSBanner_text_changed"]
[connection signal="text_changed" from="MiddleContainer/VBoxContainer/UnitIds/TabContainer/iOS/InterstitialValue" to="." method="_on_iOSInterstitial_text_changed"]
[connection signal="text_changed" from="MiddleContainer/VBoxContainer/UnitIds/TabContainer/iOS/RewardedValue" to="." method="_on_iOSRewarded_text_changed"]
[connection signal="text_changed" from="MiddleContainer/VBoxContainer/UnitIds/TabContainer/iOS/RewardedInterstitialValue" to="." method="_on_iOSRewardedInterstitial_text_changed"]
